docs: resume.go
